--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 src/main/resources/application.yml
+**/SwaggerConfig.class
+**/SwaggerConfig.java
 
 ### NetBeans ###
 /nbproject/private/
