--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ out/
 src/main/resources/application.yml
 **/SwaggerConfig.class
 **/SwaggerConfig.java
+# elastic search
+/src/main/resources/ca.crt
 
 ### NetBeans ###
 /nbproject/private/
