--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,18 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	// es
 	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+	implementation 'co.elastic.clients:elasticsearch-java:8.9.0'
+	//implementation 'co.elastic.clients:elasticsearch-rest-high-level-client:7.17.9'
+	implementation 'co.elastic.clients:elasticsearch-rest-high-level-client:8.7.1'
+
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor'org.projectlombok:lombok'
 
 }
 dependencyManagement {
