--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ src/main/resources/application.yml
 **/SwaggerConfig.java
 # elastic search
 /src/main/resources/ca.crt
+src/main/resources/**
 
 ### NetBeans ###
 /nbproject/private/
